--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แนะนำสถานที่ท่องเที่ยวจังหวัดร้อยเอ็ด</title>
     <link rel="stylesheet" href="css/styles.css">
+
+    <style>
+
+    body {
+        background-image: url('images/royaed.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    </style>
+
 </head>
 <body>
     <header>
