--- a/index.html
+++ b/index.html
@@ -7,16 +7,108 @@
     <link rel="stylesheet" href="css/styles.css">
 
     <style>
+        /* พื้นหลัง */
+        body {
+            background-image: url('images/royaed.jpg');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+        }
 
-    body {
-        background-image: url('images/royaed.jpg');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
+        /* ส่วนเฮดเดอร์ */
+        header {
+            background-color: rgba(0, 0, 0, 0.6);
+            color: white;
+            padding: 10px 20px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+            display: flex;
+            justify-content: center; /* จัดให้อยู่ตรงกลาง */
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+        }
 
+        header h1 {
+            font-size: 1.2rem;
+            margin: 0;
+        }
+
+        /* เมนูนำทาง */
+        nav ul {
+            list-style: none;
+            padding: 0;
+            margin: 10px 0 0;
+            display: flex;
+            gap: 20px; /* ระยะห่างระหว่างลิงก์ */
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+
+        nav ul li a:hover {
+            color: #f6c31c;
+        }
+
+        /* Hero Section */
+        .hero {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 80vh;
+            text-align: center;
+            color: white;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+            margin-top: 60px; /* เว้นที่สำหรับเฮดเดอร์ */
+        }
+
+        .hero h2 {
+            font-size: 2rem;
+            margin: 10px 0;
+        }
+
+        .hero p {
+            font-size: 1.5rem;
+            margin: 10px 0;
+        }
+
+        .btn {
+            background-color: #f6c31c;
+            color: #171515;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn:hover {
+            background-color: #d78219;
+        }
+
+        /* Footer */
+        footer {
+            background-color: rgba(0, 0, 0, 0.6);
+            color: white;
+            text-align: center;
+            padding: 15px;
+            font-size: 0.9rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
-
 </head>
 <body>
     <header>
@@ -33,7 +125,7 @@
     <main>
         <section class="hero">
             <h2>พบกับวัฒนธรรมไทยจังหวัดร้อยเอ็ด</h2>
-            <p>๕ สถานที่ท่องเที่ยว ที่คุณต้องได้พบเจอสักครั้ง</p>
+            <p>5 สถานที่ท่องเที่ยวที่คุณต้องไปเยือนสักครั้ง</p>
         </section>
     </main>
 
