--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
             top: 0;
             left: 0;
             width: 100%;
+            height: 120px;
             z-index: 1000;
             display: flex;
-            justify-content: center; /* จัดให้อยู่ตรงกลาง */
+            justify-content: center;
             align-items: center;
             flex-direction: column;
             text-align: center;
         }
 
         header h1 {
-            font-size: 1.2rem;
+            font-size: 2rem;
             margin: 0;
         }
 
@@ -46,7 +47,7 @@
             padding: 0;
             margin: 10px 0 0;
             display: flex;
-            gap: 20px; /* ระยะห่างระหว่างลิงก์ */
+            gap: 20px;
         }
 
         nav ul li a {
@@ -62,25 +63,35 @@
 
         /* Hero Section */
         .hero {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            position: relative;
             height: 80vh;
-            text-align: center;
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-            margin-top: 60px; /* เว้นที่สำหรับเฮดเดอร์ */
+            margin-top: 60px;
         }
 
         .hero h2 {
-            font-size: 2rem;
-            margin: 10px 0;
+            position: absolute;
+            top: 95px; /* ชิดด้านบน */
+            left: 20px; /* ชิดด้านซ้าย */
+            width: 50%; /* จำกัดความกว้าง */
+            font-size: 2.5rem;
+            margin: 0;
+            line-height: 1.8; /* ระยะห่างระหว่างบรรทัด */
+            text-align: left; /* จัดชิดซ้าย */
+            word-wrap: break-word; /* แบ่งคำที่ยาวเกิน */
         }
 
         .hero p {
-            font-size: 1.5rem;
-            margin: 10px 0;
+            font-size: 1.8rem;
+            margin: 65px 0;
+            position: absolute;
+            top: 180px;
+            bottom: 20px;
+            left: 20px;
+            line-height: 2;
+            text-align: left;
+            word-wrap: break-word;
         }
 
         .btn {
@@ -124,8 +135,8 @@
 
     <main>
         <section class="hero">
-            <h2>พบกับวัฒนธรรมไทยจังหวัดร้อยเอ็ด</h2>
-            <p>5 สถานที่ท่องเที่ยวที่คุณต้องไปเยือนสักครั้ง</p>
+            <h2>พบกับวัฒนธรรมไทย<br>จังหวัดร้อยเอ็ด</h2>
+            <p>๕ สถานที่ท่องเที่ยว<br>ที่คุณต้องไปเยือนสักครั้ง</p>
         </section>
     </main>
 
