--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
 
         .hero h2 {
             position: absolute;
-            top: 95px; /* ชิดด้านบน */
-            left: 20px; /* ชิดด้านซ้าย */
-            width: 50%; /* จำกัดความกว้าง */
+            top: 95px; 
+            left: 20px;
+            width: 50%; 
             font-size: 2.5rem;
             margin: 0;
-            line-height: 1.8; /* ระยะห่างระหว่างบรรทัด */
-            text-align: left; /* จัดชิดซ้าย */
-            word-wrap: break-word; /* แบ่งคำที่ยาวเกิน */
+            line-height: 1.8; 
+            text-align: left; 
+            word-wrap: break-word;
         }
 
         .hero p {
@@ -96,12 +96,12 @@
 
         .btn {
             background-color: #f6c31c;
-            color: #171515;
+            color: rgb(23, 21, 21);
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 5px;
             font-weight: bold;
-            transition: background-color 0.3s ease;
+            transition: background 0.3s ease;
         }
 
         .btn:hover {
@@ -137,7 +137,8 @@
         <section class="hero">
             <h2>พบกับวัฒนธรรมไทย<br>จังหวัดร้อยเอ็ด</h2>
             <p>๕ สถานที่ท่องเที่ยว<br>ที่คุณต้องไปเยือนสักครั้ง</p>
-        </section>
+            <a href="attractions.html" class="btn">ดูสถานที่ท่องเที่ยว</a>
+        </section>        
     </main>
 
     <footer>
