--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แนะนำสถานที่ท่องเที่ยวจังหวัดร้อยเอ็ด</title>
-    <link rel="stylesheet" href="css/styles.css">
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+
 
     <style>
         /* พื้นหลัง */
         body {
+            font-family: "Sriracha", serif;
             background-image: url('images/royaed.jpg');
             background-size: cover;
             background-position: center;
