--- a/index.html
+++ b/index.html
@@ -162,6 +162,47 @@
             }
         }
 
+        .menu-toggle {
+            display: flex;
+            flex-direction: column;
+            cursor: pointer;
+            padding: 10px;
+            position: absolute; /* ทำให้แฮมเบอร์เกอร์เมนูอยู่ริมขวา */
+            right: 20px; /* ระยะห่างจากขวา */
+            z-index: 10;
+        }
+
+        .menu-toggle .bar {
+            background-color: white;
+            height: 3px;
+            width: 25px;
+            margin: 3px 0;
+            transition: all 0.3s ease;
+        }
+
+        /* เมนูหลัก */
+        .menu {
+            display: flex;
+            list-style: none;
+            justify-content: center;
+        }
+
+        .menu li {
+            margin: 0 15px;
+        }
+
+        .menu li a {
+            text-decoration: none;
+            color: white;
+            font-size: 1.2rem;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+
+        .menu li a:hover {
+            color: #f4d03f; /* สีเหลือง */
+        }
+
         /* Footer */
         footer {
             background-color: rgba(0, 0, 0, 0.6);
