เพิ่มปุ่มในcontact

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,11 @@
                     <label for="message">ข้อความ:</label>
                     <textarea id="message" name="message" required></textarea>
                     <br></br>
+                    <button type="submit">ส่งข้อความ</button>
+
+                    <button type="reset">ล้างข้อมูล</button>
+
+                    <button type="button" onclick="window.location.href='index.html';">กลับหน้าหลัก</button>
                 </form>
         </section>
 
