--- a/index.html
+++ b/index.html
@@ -4,24 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>แนะนำสถานที่ท่องเที่ยวจังหวัดร้อยเอ็ด</title>
-
-
     <link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
 
-
     <style>
-        /* พื้นหลัง */
         body {
             font-family: "Sriracha", serif;
             background-image: url('images/royaed.jpg');
             background-size: cover;
             background-position: center;
-            background-repeat: no-repeat;
             margin: 0;
             padding: 0;
         }
 
-        /* ส่วนเฮดเดอร์ */
         header {
             background-color: rgba(0, 0, 0, 0.6);
             color: white;
@@ -30,25 +24,21 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 120px;
             z-index: 1000;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-            flex-direction: column;
-            text-align: center;
         }
 
         header h1 {
-            font-size: 2rem;
+            font-size: 1.5rem;
             margin: 0;
         }
 
-        /* เมนูนำทาง */
         nav ul {
             list-style: none;
             padding: 0;
-            margin: 10px 0 0;
+            margin: 0;
             display: flex;
             gap: 20px;
         }
@@ -61,45 +51,72 @@
         }
 
         nav ul li a:hover {
-            color: #f6c31c;
+            color: #f5f5f5;
         }
 
-        /* Hero Section */
+        .menu-toggle {
+            display: none;
+            flex-direction: column;
+            cursor: pointer;
+            z-index: 2000;
+        }
+
+        .menu-toggle .bar {
+            background-color: rgba(0, 0, 0, 0.49);
+            height: 3px;
+            width: 25px;
+            margin: 3px 0;
+        }
+
+        .menu {
+            display: flex;
+        }
+
+        @media screen and (max-width: 768px) {
+            .menu {
+                display: none;
+                flex-direction: column;
+                background-color: rgba(0, 0, 0, 0.9);
+                position: absolute;
+                top: 60px;
+                right: 0;
+                width: 100%;
+                text-align: center;
+            }
+
+            .menu.active {
+                display: flex;
+            }
+
+            .menu-toggle {
+                display: flex;
+            }
+
+            .menu li {
+                margin: 15px 0;
+            }
+        }
+
         .hero {
             position: relative;
             height: 80vh;
             color: white;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-            margin-top: 60px;
+            margin-top: 120px;
+            padding: 20px;
         }
 
         .hero h2 {
-            position: absolute;
-            top: 95px; 
-            left: 20px;
-            width: 50%; 
             font-size: 2.5rem;
-            margin: 0;
-            line-height: 1.8; 
-            text-align: left; 
-            word-wrap: break-word;
+            margin: 0 0 20px;
         }
 
         .hero p {
             font-size: 1.8rem;
-            margin: 65px 0;
-            position: absolute;
-            top: 180px;
-            left: 20px;
-            line-height: 2;
-            text-align: left;
-            word-wrap: break-word;
+            line-height: 1.5;
         }
 
         .btn {
-            position: absolute;
-            bottom: 20px; /* ระยะห่างจากขอบล่าง */
-            right: 20px; /* ระยะห่างจากขอบขวา */
             background-color: #f6c31c;
             color: rgb(23, 21, 21);
             padding: 10px 20px;
@@ -107,103 +124,14 @@
             border-radius: 5px;
             font-weight: bold;
             transition: background 0.3s ease;
-            z-index: 10;
+            margin-top: 20px;
+            display: inline-block;
         }
 
         .btn:hover {
             background-color: #d78219;
         }
 
-        @media (max-width: 1000px) {
-            .hero {
-                height: a;
-                padding: 20px;
-                text-align: center;
-                margin-top: 40px; /* เพิ่มช่องว่างจากเฮดเดอร์ในมือถือ */
-            }
-
-            .hero h2 {
-                font-size: 2rem;
-                text-align: left;
-                margin-bottom: 10px;
-            }
-
-            .hero p {
-                font-size: 1.2rem;
-                text-align: left;
-            }
-
-            .btn {
-                position: relative;
-                margin: 400px auto 0;
-                bottom: unset;
-                right: unset;
-                display: block;
-                width: fit-content;
-            }
-        }
-
-        @media (max-width: 480px) {
-            header h1 {
-                font-size: 2rem;
-            }
-
-            .hero h2 {
-                font-size: 1.8rem;
-            }
-
-            .hero p {
-                font-size: 1rem;
-            }
-
-            .btn {
-                font-size: 0.9rem;
-                padding: 8px 15px;
-            }
-        }
-
-        .menu-toggle {
-            display: flex;
-            flex-direction: column;
-            cursor: pointer;
-            padding: 10px;
-            position: absolute; /* ทำให้แฮมเบอร์เกอร์เมนูอยู่ริมขวา */
-            right: 20px; /* ระยะห่างจากขวา */
-            z-index: 10;
-        }
-
-        .menu-toggle .bar {
-            background-color: white;
-            height: 3px;
-            width: 25px;
-            margin: 3px 0;
-            transition: all 0.3s ease;
-        }
-
-        /* เมนูหลัก */
-        .menu {
-            display: flex;
-            list-style: none;
-            justify-content: center;
-        }
-
-        .menu li {
-            margin: 0 15px;
-        }
-
-        .menu li a {
-            text-decoration: none;
-            color: white;
-            font-size: 1.2rem;
-            font-weight: bold;
-            transition: color 0.3s ease;
-        }
-
-        .menu li a:hover {
-            color: #f4d03f; /* สีเหลือง */
-        }
-
-        /* Footer */
         footer {
             background-color: rgba(0, 0, 0, 0.6);
             color: white;
@@ -220,7 +148,12 @@
     <header>
         <h1>ยินดีต้อนรับสู่เว็บไซต์แนะนำสถานที่ท่องเที่ยวจังหวัดร้อยเอ็ด</h1>
         <nav>
-            <ul>
+            <div class="menu-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+            <ul class="menu">
                 <li><a href="index.html">หน้าแรก</a></li>
                 <li><a href="attractions.html">สถานที่ท่องเที่ยว</a></li>
                 <li><a href="contact.html">ติดต่อเรา</a></li>
@@ -233,8 +166,17 @@
             <h2>พบกับวัฒนธรรมไทย<br>จังหวัดร้อยเอ็ด</h2>
             <p>๕ สถานที่ท่องเที่ยว<br>ที่คุณต้องไปเยือนสักครั้ง</p>
             <a href="attractions.html" class="btn">ดูสถานที่ท่องเที่ยว</a>
-        </section>        
+        </section>
     </main>
+
+    <script>
+        const mobileMenu = document.getElementById('mobile-menu');
+        const menu = document.querySelector('.menu');
+
+        mobileMenu.addEventListener('click', () => {
+            menu.classList.toggle('active');
+        });
+    </script>
 
     <footer>
         <p>© 2024 เว็บไซต์แนะนำสถานที่ท่องเที่ยวจังหวัดร้อยเอ็ด</p>
